# deb-installer

./: .gitignore  .qmlls.ini  Cargo.toml  README.md  build.rs  deb_installer.conf
data/: io.aosc.deb_installer.desktop
mo/zh_CN/LC_MESSAGES/: deb-installer.mo
po/: deb-installer.pot  en_US.po  update-po.bash  wuu_Hant.po  zh_CN.po  zh_Hant.po  zh_TW.po
src/: backend.rs  cxx_qt_bridge.rs  deb_installer.rs  deb_installer.slint  main.qml  main.rs
