[package]
name = "deb-installer"
version = "0.1.10"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
# FIXME: there is no reactor running, must be called from the context of a Tokio 1.x runtime
slint = { version = "=1.15", features = ["gettext"] }
oma-pm = { version = "0.63.0", default-features = false }
oma-fetch = "0.37"
tracing = "0.1.44"
zbus = { version = "5.15.0", features = ["tokio"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.6.1", features = ["derive"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
flume = "0.12.0"
console = "0.16.3"
which = "8.0.2"
num_enum = "0.7.6"
oma-utils = { version = "0.13.1", features = ["human-bytes"] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "tls12",
] }
oma-history = { version = "0.10.0", optional = true }

[features]
debug = []
aosc = ["oma-history", "oma-pm/aosc"]
default = ["aosc"]
