[package]
name = "deb-installer"
version = "0.3.4"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
oma-pm = { version = "0.64.0", default-features = false }
oma-fetch = "0.38"
apt-auth-config = "0.6"
futures = "0.3"
tracing = "0.1.44"
zbus = { version = "5.15.0", features = ["tokio"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.6.1", features = ["derive"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
flume = "0.12.0"
console = "0.16.3"
which = "8.0.2"
num_enum = "0.7.6"
oma-utils = { version = "0.13.1", features = ["human-bytes"] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "tls12",
] }
oma-history = { version = "0.11.0", optional = true }
cxx-qt = "0.9" 
cxx = "1.0.194"
cxx-qt-lib = { version = "0.9", features = ["qt_full"] }
gettext-rs = "0.7.7"
reqwest-middleware = "0.5.2"

[build-dependencies]
cxx-qt-build = "0.9"

[features]
debug = []
aosc = ["oma-history", "oma-pm/aosc"]
default = ["aosc"]
